--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
     "@types/react-slick": "^0.23.13",
     "framer": "^2.4.1",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-slick": "^0.30.2",
-    "react-slideshow-image": "^4.3.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
